--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Diego\\AppData\\Roaming\\NetBeans\\19\\build.properties
+file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\Victor\\.m2\\repository\\mysql\\mysql-connector-java\\8.0.17
+user.properties.file=C:\\Users\\Victor\\AppData\\Roaming\\NetBeans\\21\\build.properties
