ProyectoBD2 Cambios Full

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoCajeroBD
 excludes=
 file.reference.mysql-connector-j-8.1.0.jar=..\\mysql-connector-j-8.1.0.jar
+file.reference.ojdbc17.jar=..\\ojdbc17.jar
 file.reference.ojdbc8.jar=C:\\oracle\\ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.1.0.jar}:\
-    ${file.reference.ojdbc8.jar}
+    ${file.reference.ojdbc8.jar}:\
+    ${file.reference.ojdbc17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
